tests/snapshot_tests/components/snapshots/snapshot_tests__components__word_grid_test__word_grid_full_input_empty.snap
---
source: tests/snapshot_tests/components/word_grid_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1. ____             2. ____             3. ____            4. ____           │"
"│ 5. ____             6. ____             7. ____            8. ____           │"
"│ 9. ____            10. ____            11. ____           12. ____           │"
"│13. ____            14. ____            15. ____           16. ____           │"
"│17. ____            18. ____            19. ____           20. ____           │"
"│21. ____            22. ____            23. ____           24. ____           │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
