tests/snapshot_tests/components/snapshots/snapshot_tests__components__word_grid_test__word_grid_full_input_populated.snap
---
source: tests/snapshot_tests/components/word_grid_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│01. abandon         02. ability         03. able           04. ____           │"
"│05. ____            06. ____            07. ____           08. ____           │"
"│09. ____            10. ____            11. ____           12. ____           │"
"│13. ____            14. ____            15. ____           16. ____           │"
"│17. ____            18. ____            19. ____           20. ____           │"
"│21. ____            22. ____            23. ____           24. ____           │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
