tests/snapshot_tests/components/snapshots/snapshot_tests__components__word_grid_test__word_grid_partial_verify.snap
---
source: tests/snapshot_tests/components/word_grid_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1. abandon          2. ····             3. ····            4. ····           │"
"│ 5. ····             6. wrong            7. ····            8. ····           │"
"│ 9. ····            10. ····            11. ····           12. ····           │"
"│13. ____            14. ····            15. ····           16. ····           │"
"│17. ····            18. ····            19. ····           20. ____           │"
"│21. ····            22. ····            23. ····           24. ····           │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
